WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
72180
CSS table with 100% width can overflow their containing block
https://bugs.webkit.org/show_bug.cgi?id=72180
Summary
CSS table with 100% width can overflow their containing block
Julien Chaffraix
Reported
2011-11-11 13:59:05 PST
I think this regressed with
bug 69709
which included the border in the width HTML table for both fixed and percent length. The ChangeLog and the provided links mention the need for fixed length only. I could not find anything relevant in the discussions linked to the bug or the spec. Firefox and IE9 don't seem to include the border in the length in this case.
Attachments
test case: the pink and green borders should not be outgrow the black and blue ones.
(1.22 KB, text/html)
2011-11-11 14:00 PST
,
Julien Chaffraix
no flags
Details
Proposed change: avoid adding the border to percent length.
(16.62 KB, patch)
2011-11-11 15:34 PST
,
Julien Chaffraix
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Julien Chaffraix
Comment 1
2011-11-11 14:00:46 PST
Created
attachment 114767
[details]
test case: the pink and green borders should not be outgrow the black and blue ones.
Julien Chaffraix
Comment 2
2011-11-11 14:11:38 PST
Please replace HTML with CSS in my previous analysis (pretty obvious from the change and the test case that we are talking *CSS* table).
Julien Chaffraix
Comment 3
2011-11-11 15:34:56 PST
Created
attachment 114789
[details]
Proposed change: avoid adding the border to percent length.
Robert Hogan
Comment 4
2011-11-12 04:30:57 PST
You're absolutely right - percent tables should have been excluded in but 69709.
Dave Hyatt
Comment 5
2011-11-17 11:32:27 PST
Comment on
attachment 114789
[details]
Proposed change: avoid adding the border to percent length. r=me
Julien Chaffraix
Comment 6
2011-11-17 11:52:43 PST
Comment on
attachment 114789
[details]
Proposed change: avoid adding the border to percent length. Thanks, David!
WebKit Review Bot
Comment 7
2011-11-17 13:07:06 PST
Comment on
attachment 114789
[details]
Proposed change: avoid adding the border to percent length. Clearing flags on attachment: 114789 Committed
r100661
: <
http://trac.webkit.org/changeset/100661
>
WebKit Review Bot
Comment 8
2011-11-17 13:07:10 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug