CSS table with 100% width can overflow their containing block https://bugs.webkit.org/show_bug.cgi?id=72180

Reviewed by David Hyatt.

Source/WebCore:

Tests: fast/table/table-in-table-percent-width-collapsing-border-quirks-mode.html
       fast/table/table-in-table-percent-width-collapsing-border.html
       fast/table/table-in-table-percent-width-quirks-mode.html
       fast/table/table-in-table-percent-width.html

After r97555, we would include the borders in a CSS table's logical width even if the 'width'
property was a percent. This does not match what Firefox and IE are doing. Thus don't apply
this behavior to percent 'width'.

* rendering/RenderTable.cpp:
(WebCore::RenderTable::computeLogicalWidth):

LayoutTests:

Several tests to check that we don't overflow our containing block with width: 100%.

* fast/table/table-in-table-percent-width-collapsing-border-expected.png: Added.
* fast/table/table-in-table-percent-width-collapsing-border-expected.txt: Added.
* fast/table/table-in-table-percent-width-collapsing-border-quirks-mode-expected.png: Added.
* fast/table/table-in-table-percent-width-collapsing-border-quirks-mode-expected.txt: Added.
* fast/table/table-in-table-percent-width-collapsing-border-quirks-mode.html: Added.
* fast/table/table-in-table-percent-width-collapsing-border.html: Added.
* fast/table/table-in-table-percent-width-expected.png: Added.
* fast/table/table-in-table-percent-width-expected.txt: Added.
* fast/table/table-in-table-percent-width-quirks-mode-expected.png: Added.
* fast/table/table-in-table-percent-width-quirks-mode-expected.txt: Added.
* fast/table/table-in-table-percent-width-quirks-mode.html: Added.
* fast/table/table-in-table-percent-width.html: Added.


Canonical link: https://commits.webkit.org/89163@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100661 268f45cc-cd09-0410-ab3c-d52691b4dbfc